--- a/controller/views/lists/lists.css
+++ b/controller/views/lists/lists.css
@@ -10,6 +10,8 @@
 
 .list-timer {
   margin-right: 10px;
+  display: flex;
+  align-items: baseline;
 }
 
 .list-timer-icon {
