--- a/controller/views/votes/votes.css
+++ b/controller/views/votes/votes.css
@@ -33,7 +33,8 @@
 }
 
 .vote-values {
-  display: inline-block;
+  display: inline-flex;
+  align-items: baseline;
   margin-right: 20px;
   margin-left: 20px;
   font-size: 0;
